--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 
 <body>
-    <script src='./dist/bundle.js'></script>
+    <script src='./bundle.js'></script>
+    <div class="root"></div>
 </body>
 
 </html>
