--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 
 <body>
-    <script src='./bundle.js'></script>
-    <div class="root"></div>
+    <script src='./dist/bundle.js'></script>
 </body>
 
 </html>
